# torch-test

./: .gitignore  Cargo.toml  Makefile  build.rs  requirements.txt  rustfmt.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/tensors/: mod.rs
src/transformers/: mod.rs  model_ids.rs  traits.rs
src/transformers/models/: mod.rs
src/transformers/models/qwen3_vl/: dense.rs  mod.rs  moe.rs  tests_qwen3_dense.rs  tests_qwen3_dense_helper.py  vision.rs
src/transformers/models/qwen3_vl/py_tests/: tests_qwen3_dense_embed_helper.py  tests_qwen3_dense_multimodal_debug_helper.py  tests_qwen3_dense_multimodal_embed_helper.py  tests_qwen3_reranker_helper.py
src/transformers/repo/: local.rs  mod.rs  remote.rs
